--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,22 +6,20 @@
 			<span class="burger__line burger__line--min"></span>
 		</button>
 
-		<div class="logo">
-			<img src="img/logo.png" alt="Логотип">
-		</div>
+		<img class="logo" src="img/logo.png" alt="Логотип">
 		<div class="header__left">
 			<nav class="nav header__nav">
 				<ul class="nav__list">
 					<li class="nav__item">
-						<a href="#main" class="nav__link nav__link-burger"
+						<a href="#about" class="nav__link nav__link-burger"
 							data-main-link>О нас</a>
 					</li>
 					<li class="nav__item">
-						<a href="#gallery" class="nav__link nav__link-burger"
+						<a href="#programs" class="nav__link nav__link-burger"
 							data-main-link>Цены</a>
 					</li>
 					<li class="nav__item">
-						<a href="#programs" class="nav__link nav__link-burger"
+						<a href="#" class="nav__link nav__link-burger"
 							data-main-link>Доп. услуги</a>
 					</li>
 					<li class="nav__item">
@@ -38,10 +36,6 @@
 					</li>
 				</ul>
 			</nav>
-			<!-- <div class="consultation">
-				<button
-					class="consultation-btn btn btn--white-text btn--green-bg header__btn">Консультация</button>
-			</div> -->
 			<button class="burger-close-btn">
 				<span class="burger-close-btn__line"></span>
 				<span class="burger-close-btn__line"></span>
