--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,7 +36,8 @@ body {
 @import "./components/header";
 @import "./components/hero";
 @import "./components/about";
-@import "./components/program";
+@import "./components/programs";
 @import "./components/404";
 @import "./components/burger";
 @import "./components/modal";
+@import "./components/product";
