--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
 	<div class="container about__container" data-animation>
 		<div class="left">
 			<h2 class="sub-title">О Компании</h2>
