--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -1,5 +1,179 @@
 <section class="programs grey-section" id="programs">
 	<div class="container" data-animation>
-		УСЛУГИ
+		<h2 class="sub-title programs__title">Наши услуги</h2>
+		<ul class="programs__products">
+			<li>
+				<article class="product">
+					<div class="product__img">
+						<img src="img/elya.jpg" alt="Фото продукта">
+					</div>
+					<h3 class="product__title">Маленький шоколадный фонтан (60 см) 3
+						яруса от 20 до 40 чел.</h3>
+					<div class="product__info">
+						<p>Что входить в стоимость:</p>
+						<ol>
+							<li>
+								<p>Бельгийский/Итальянский шоколад</p>
+							</li>
+							<li>
+								<p>Сезонные фрукты</p>
+							</li>
+							<li>
+								<p>Работа шоколатье</p>
+							</li>
+							<li>
+								<p>Расходные материалы (шпажки, тарелки, салфетки, скатерть)</p>
+							</li>
+							<li>
+								<p>Время работы фонтана 2 ч.</p>
+							</li>
+							<li>
+								<p>Доп. час 2000₽ + 1000₽ выезд за пределы
+									Санкт-Петербурга</p>
+							</li>
+						</ol>
+					</div>
+					<button class="product__btn" id="smallF">Заказать</button>
+				</article>
+			</li>
+			<li>
+				<article class="product">
+					<div class="product__img">
+						<img src="img/2.jpg" alt="Фото продукта">
+					</div>
+					<h3 class="product__title">Средний шоколадный фонтан (80 см) 3
+						яруса от 40 до 70 чел.</h3>
+					<div class="product__info">
+						<p>Что входить в стоимость:</p>
+						<ol>
+							<li>
+								<p>Бельгийский/Итальянский шоколад</p>
+							</li>
+							<li>
+								<p>Сезонные фрукты</p>
+							</li>
+							<li>
+								<p>Работа шоколатье</p>
+							</li>
+							<li>
+								<p>Расходные материалы (шпажки, тарелки, салфетки, скатерть)</p>
+							</li>
+							<li>
+								<p>Время работы фонтана 2 ч.</p>
+							</li>
+							<li>
+								<p>Доп. час 2000₽ + 1000₽ выезд за пределы
+									Санкт-Петербурга</p>
+							</li>
+						</ol>
+					</div>
+					<button class="product__btn" id="mediumF">Заказать</button>
+				</article>
+			</li>
+			<li>
+				<article class="product">
+					<div class="product__img">
+						<img src="img/3.jpg" alt="Фото продукта">
+					</div>
+					<h3 class="product__title">Большой шоколадный фонтан (112 см) 4
+						яруса от 80 до 120 чел.</h3>
+					<div class="product__info">
+						<p>Что входить в стоимость:</p>
+						<ol>
+							<li>
+								<p>Бельгийский/Итальянский шоколад</p>
+							</li>
+							<li>
+								<p>Сезонные фрукты</p>
+							</li>
+							<li>
+								<p>Работа шоколатье</p>
+							</li>
+							<li>
+								<p>Расходные материалы (шпажки, тарелки, салфетки, скатерть)</p>
+							</li>
+							<li>
+								<p>Время работы фонтана 2 ч.</p>
+							</li>
+							<li>
+								<p>Доп. час 2000₽ + 1000₽ выезд за пределы
+									Санкт-Петербурга</p>
+							</li>
+						</ol>
+					</div>
+					<button class="product__btn" id="bigF">Заказать</button>
+				</article>
+			</li>
+		</ul>
+		<div class="modal">
+			<div class="modal__container">
+				<div class="modal__header">
+					<h3 class="modal__title">Выберите параметры заказа</h3>
+				</div>
+				<form class="modal__form" action="tg.php" method="post">
+					<input type="text" hidden value="Маленький фонтан" name="Маленький фонтан"
+						id="fountain">
+					<select name="count" id="count">
+						<option disabled>Укажите кол-во человек</option>
+						<option value="до 20 человек">До 20 человек</option>
+						<option value="20 человек">20</option>
+						<option value="30">30</option>
+						<option value="40">40</option>
+						<option value="Выезд за С-Пб">Выезд за С-Пб</option>
+					</select>
+					<input type="text" id="name" name="name" placeholder="Введите ваше ФИО" />
+					<input type="tel" id="phone" name="phone"
+						placeholder="Укажите номер телефона" />
+					<input type="email" id="email" name="email" placeholder="Укажите почту" />
+					<button type="submit" class="product__btn feedback-btn">Отправить
+						заявку</button>
+				</form>
+			</div>
+		</div>
+
+		<div class="succes-modal">
+			<div class="succes-modal__container">
+				<div class="succes-modal__content">
+					<p>Заявка отправлена 💌</p>
+					<p>Мы скоро с Вами свяжемся 😎</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="fault-modal">
+			<div class="fault-modal__container">
+				<div class="fault-modal__content">
+					<p>Что-то пошло не так 💫</p>
+					<p>Проверьте соединение с интернетом 🌐</p>
+				</div>
+			</div>
+		</div>
+		<!-- <h2 class="sub-title programs__title">Дополнительные услуги</h2>
+		<ul class="programs__list">
+			<li class="programs__item">
+				<img src="img/icon 1.webp" alt="Кнопка заказа вафлей">
+				<button type="button">Заказать</button>
+			</li>
+			<li class="programs__item">
+				<button type="button">
+					<img src="img/icon 2.webp" alt="Кнопка заказа фонтана">
+				</button>
+			</li>
+			<li class="programs__item">
+				<button type="button">
+					<img src="img/icon 3.webp" alt="Кнопка заказа глинтвейна">
+				</button>
+			</li>
+			<li class="programs__item">
+				<button type="button">
+					<img src="img/icon 4.webp" alt="Кнопка заказа ваты">
+				</button>
+			</li>
+			<li class="programs__item">
+				<button type="button">
+					<img src="img/icon 5.webp" alt="Кнопка заказа попкорна">
+				</button>
+			</li>
+		</ul> -->
 	</div>
 </section>
