--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -15,19 +15,13 @@
 	#parallax {
 		width: 100%;
 		height: 100%;
-		background-image: url(../img/hong-kong-waffle.jpg);
-		background-repeat: no-repeat;
-		background-size: contain;
-		background-position: 80%;
-		background-attachment: fixed;
+		background-image: url(../img/fontain.webp);
 		border-radius: 20px;
 		box-shadow: 0 0 10px black;
-	}
-
-	.sub-title {
-		text-align: center;
-		font-size: 60px;
-		margin-bottom: 40px;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-attachment: fixed;
+		background-position: center;
 	}
 
 	p {
