--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -29,8 +29,9 @@
 		flex-wrap: wrap;
 	}
 
-	.logo img {
-		max-width: 35%;
+	.logo {
+		display: block;
+		width: 150px;
 	}
 }
 
@@ -41,20 +42,15 @@
 		gap: 24px;
 	}
 
-	&__item:last-child {
-		margin-right: 50px;
-	}
-
 	&__link {
 		position: relative;
 		transition: ease-in-out .15s;
 
-		@media screen and (max-width: 1024px) {
+		@media screen and (max-width: 800px) {
 			&-burger {
 				display: none;
 			}
 		}
-
 
 		&::after {
 			content: '';
@@ -63,7 +59,7 @@
 			left: 0;
 			width: 0;
 			height: 2px;
-			background-color: #fff;
+			background-color: rgb(255, 94, 0);
 			transition: all ease-in 0.2s;
 		}
 
@@ -74,22 +70,35 @@
 			right: 0;
 			width: 0;
 			height: 2px;
-			background-color: #fff;
+			background-color: rgb(255, 94, 0);
 			transition: all ease-in 0.2s;
 		}
 
 		@media (hover:hover) {
 			&:hover {
-				color: var(--saffron);
+				color: var(--wheat);
 			}
 
 			&:hover::after,
 			&:hover::before {
 				width: 100%;
-				background-color: var(--saffron);
+				background-color: var(--wheat);
+			}
+
+			@media (max-width:800px) {
+				@media (hover:hover) {
+					&:hover {
+						color: black;
+					}
+
+					&:hover::after,
+					&:hover::before {
+						height: 4px;
+						background-color: black;
+					}
+				}
 			}
 		}
-
 	}
 
 	&__btn {
@@ -97,53 +106,58 @@
 	}
 }
 
-@media (max-width: 1100px) {
-	.nav__item:last-child {
-		margin-right: 20px;
-	}
-}
-
-@media (max-width:1024px) {
+@media (max-width:800px) {
 	.header__left {
 		padding-top: 50px;
 		position: fixed;
 		top: 0;
 		bottom: 0;
 		left: -50%;
+		opacity: 0;
 		display: block;
 		width: 50%;
 		height: 40%;
 		border-bottom-right-radius: 500px;
-		background-color: rgb(253, 207, 132);
+		background-color: #f5d9be;
 		z-index: 99;
-		transition: all ease-in 0.4s;
+		transition: all ease-in 0.3s;
 
 		&-active {
 			width: 100%;
+			opacity: 1;
 			left: 0;
 			height: 100vh;
 			border-bottom-right-radius: 0;
 		}
 	}
 
-	.nav__list {
-		padding: 16px;
-		display: flex;
-		justify-content: start;
-		flex-direction: column;
-		align-items: flex-start;
-	}
+	.nav {
+		height: 100%;
+		display: grid;
+		place-content: center;
 
-	.nav__link {
-		display: none;
-
-		&-burger {
-			display: block;
+		&__list {
+			padding: 16px;
+			display: flex;
+			justify-content: start;
+			flex-direction: column;
+			align-items: center;
+			row-gap: 50px;
 		}
-	}
 
-	.consultation {
-		display: none;
+		&__item {
+			font-size: 40px;
+			font-weight: 900;
+			color: black;
+		}
+
+		&__link {
+			display: none;
+
+			&-burger {
+				display: block;
+			}
+		}
 	}
 
 	@media(max-width: 800px) {
