--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -3,7 +3,8 @@
 	display: flex;
 	flex-direction: column;
 	font-size: 30px;
-	width: 365px;
+	width: 100%;
+	max-width: 365px;
 	border: 1px solid #000000;
 	box-shadow: 0 0 10px rgb(0, 0, 0);
 	border-radius: 4px;
