добавление нескольких модалок

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,9 +36,11 @@
 					</li>
 				</ul>
 			</nav>
-			<button class="burger-close-btn">
-				<span class="burger-close-btn__line"></span>
-				<span class="burger-close-btn__line"></span>
+			<button class="burger-close-btn close-btn">
+				<span
+					class="burger__line close-btn close-btn__line"></span>
+				<span
+					class="burger__line close-btn close-btn__line"></span>
 			</button>
 		</div>
 	</div>
