--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,3 +41,4 @@ body {
 @import "./components/burger";
 @import "./components/modal";
 @import "./components/product";
+@import "./components/popup";
