--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -33,7 +33,8 @@
 							</li>
 						</ol>
 					</div>
-					<button class="product__btn" id="smallF">Заказать</button>
+					<button class="product__btn" id="smallF"
+						data-name="Маленький фонтан">Заказать</button>
 				</article>
 			</li>
 			<li>
@@ -67,7 +68,8 @@
 							</li>
 						</ol>
 					</div>
-					<button class="product__btn" id="mediumF">Заказать</button>
+					<button class="product__btn" id="mediumF"
+						data-name="Средний фонтан">Заказать</button>
 				</article>
 			</li>
 			<li>
@@ -101,39 +103,15 @@
 							</li>
 						</ol>
 					</div>
-					<button class="product__btn" id="bigF">Заказать</button>
+					<button class="product__btn" id="bigF"
+						data-name="Большой фонтан">Заказать</button>
 				</article>
 			</li>
 		</ul>
-		<div class="modal">
-			<div class="modal__container">
-				<div class="modal__header">
-					<h3 class="modal__title">Выберите параметры заказа</h3>
-				</div>
-				<form class="modal__form" action="tg.php" method="post">
-					<input type="text" hidden value="Маленький фонтан" name="Маленький фонтан"
-						id="fountain">
-					<select name="count" id="count">
-						<option disabled>Укажите кол-во человек</option>
-						<option value="до 20 человек">До 20 человек</option>
-						<option value="20 человек">20</option>
-						<option value="30">30</option>
-						<option value="40">40</option>
-						<option value="Выезд за С-Пб">Выезд за С-Пб</option>
-					</select>
-					<input type="text" id="name" name="name" placeholder="Введите ваше ФИО" />
-					<input type="tel" id="phone" name="phone"
-						placeholder="Укажите номер телефона" />
-					<input type="email" id="email" name="email" placeholder="Укажите почту" />
-					<button type="submit" class="product__btn feedback-btn">Отправить
-						заявку</button>
-				</form>
-			</div>
-		</div>
 
-		<div class="succes-modal">
-			<div class="succes-modal__container">
-				<div class="succes-modal__content">
+		<div class="success-modal">
+			<div class="success-modal__container">
+				<div class="success-modal__content">
 					<p>Заявка отправлена 💌</p>
 					<p>Мы скоро с Вами свяжемся 😎</p>
 				</div>
@@ -148,6 +126,9 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="popup popup-email">введите email полностью</div>
+		<div class="popup popup-phone">введите телефон полностью</div>
 		<!-- <h2 class="sub-title programs__title">Дополнительные услуги</h2>
 		<ul class="programs__list">
 			<li class="programs__item">
