--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -26,51 +26,14 @@
 		}
 	}
 
-	@media(max-width: 800px) {
-		top: 23px;
-	}
-
 	&-close-btn {
-		display: none;
-		position: absolute;
-		top: 16px;
-		right: 7%;
-		width: 24px;
-		height: 24px;
-		cursor: pointer;
-		z-index: 100;
-
-		&:hover span {
-			background: #84998a;
-		}
-
-		&__line {
-			display: block;
-			position: absolute;
-			width: 100%;
-			height: 3px;
-			border-radius: 5px;
-			background: #fff;
-			transition: 0.15s;
-
-			&:first-child {
-				transform: translateY(-50%) rotate(45deg);
-			}
-
-			&:last-child {
-				transform: translateY(-50%) rotate(-45deg);
-			}
-		}
-
-
 		@media (max-width:800px) {
 			display: block;
-		}
-	}
-}
 
-.modal__close {
-	@media(max-width:4000px) {
-		display: block;
+			.burger__line {
+				width: 30px;
+				background-color: black;
+			}
+		}
 	}
 }
