--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -16,9 +16,45 @@ select:focus-visible {
 	}
 }
 
-
 .sub-title {
 	text-align: center;
 	font-size: 60px;
 	margin-bottom: 40px;
+}
+
+.close-btn {
+	display: none;
+	position: absolute;
+	top: 16px;
+	right: 7%;
+	width: 24px;
+	height: 24px;
+	cursor: pointer;
+	z-index: 100;
+
+	&:hover span {
+		background: #84998a;
+	}
+
+	&--active {
+		display: block;
+	}
+
+	&__line {
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 3px;
+		border-radius: 5px;
+		background: #fff;
+		transition: 0.15s;
+
+		&:first-child {
+			transform: translateY(-50%) rotate(45deg);
+		}
+
+		&:last-child {
+			transform: translateY(-50%) rotate(-45deg);
+		}
+	}
 }
