--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,29 +1,30 @@
 .modal {
-	// position: fixed;
-	// width: 100%;
-	// height: 100vh;
+	position: fixed;
+	width: 100%;
+	height: 100vh;
 	display: grid;
 	place-content: center;
 	background-color: #0000008c;
 	z-index: 999;
 
-	&__header {
-		margin-bottom: 20px;
-	}
-
 	&__container {
 		padding: 60px 45px 40px;
 		display: block;
-		// position: absolute;
-		// top: 50%;
-		// left: 50%;
-		// transform: translate(-50%, -50%);
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 		width: 100%;
 		max-width: 450px;
 		border-radius: 10px;
-		color: var(--white);
-		background-color: var(--papa-green-hover);
+		background-color: #e4ae7b;
 		overflow: hidden;
+		text-align: center;
+	}
+
+	&__header {
+		position: relative;
+		margin-bottom: 20px;
 	}
 
 	&__form {
@@ -37,7 +38,6 @@
 		width: 100%;
 		border-radius: 5px;
 		font-size: 18px;
-		background-color: var(--wheat);
 		padding: 10px;
 		font-weight: 500;
 	}
@@ -47,10 +47,37 @@
 			opacity: 0.7;
 		}
 	}
+
+	&__btn:disabled,
+	.disabled-button {
+		background-color: rgb(92, 92, 92) !important;
+		cursor: default;
+	}
+
+
+	&__input-field {
+		position: relative;
+
+		&--invalid {
+			box-shadow: 0 0 15px var(--invalid-color);
+		}
+	}
+
+	&--hidden {
+		opacity: 0;
+		visibility: hidden;
+	}
+
+	&__close-btn {
+		.close-btn__line {
+			background: black;
+		}
+	}
 }
 
-.succes-modal,
+.success-modal,
 .fault-modal {
+	display: none;
 	opacity: 0;
 	visibility: hidden;
 
@@ -92,7 +119,7 @@
 	}
 }
 
-.succes-modal__container {
+.success-modal__container {
 	background-color: rgb(142, 233, 115);
 	border: solid 5px rgb(15, 150, 44);
 }
