--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -16,8 +16,9 @@
 	margin-bottom: 20px;
 	display: block;
 	width: 100%;
-	overflow: hidden;
 	max-height: 400px;
+	overflow: hidden;
+	border-radius: 4px;
 
 	img {
 		width: 100%;
