--- a/src/scss/components/_programs.scss
+++ b/src/scss/components/_programs.scss
@@ -15,7 +15,7 @@
 		margin-bottom: 50px;
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: space-between;
+		justify-content: center;
 		gap: 30px;
 	}
 
