--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -5,7 +5,7 @@
 	display: grid;
 	place-content: center;
 	background-color: #0000008c;
-	z-index: 999;
+	z-index: 200;
 
 	&__container {
 		padding: 60px 45px 40px;
@@ -87,7 +87,7 @@
 	transform: translate(-50%, -50%);
 	width: 100%;
 	height: 100%;
-	z-index: 60;
+	z-index: 201;
 	background-color: rgba(0, 0, 0, .3);
 
 	transition: linear .2s;
@@ -114,6 +114,7 @@
 	}
 
 	&--active {
+		display: block;
 		opacity: 1;
 		visibility: visible;
 	}
