закончил header и hero

--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -33,7 +33,7 @@
 							</li>
 						</ol>
 					</div>
-					<button class="product__btn" id="smallF"
+					<button class="product__btn order-btn" id="smallF"
 						data-name="Маленький фонтан">Заказать</button>
 				</article>
 			</li>
@@ -68,7 +68,7 @@
 							</li>
 						</ol>
 					</div>
-					<button class="product__btn" id="mediumF"
+					<button class="product__btn order-btn" id="mediumF"
 						data-name="Средний фонтан">Заказать</button>
 				</article>
 			</li>
@@ -103,12 +103,11 @@
 							</li>
 						</ol>
 					</div>
-					<button class="product__btn" id="bigF"
+					<button class="product__btn order-btn " id="bigF"
 						data-name="Большой фонтан">Заказать</button>
 				</article>
 			</li>
 		</ul>
-
 		<div class="success-modal">
 			<div class="success-modal__container">
 				<div class="success-modal__content">
@@ -117,7 +116,6 @@
 				</div>
 			</div>
 		</div>
-
 		<div class="fault-modal">
 			<div class="fault-modal__container">
 				<div class="fault-modal__content">
@@ -126,35 +124,7 @@
 				</div>
 			</div>
 		</div>
-
 		<div class="popup popup-email">введите email полностью</div>
 		<div class="popup popup-phone">введите телефон полностью</div>
-		<!-- <h2 class="sub-title programs__title">Дополнительные услуги</h2>
-		<ul class="programs__list">
-			<li class="programs__item">
-				<img src="img/icon 1.webp" alt="Кнопка заказа вафлей">
-				<button type="button">Заказать</button>
-			</li>
-			<li class="programs__item">
-				<button type="button">
-					<img src="img/icon 2.webp" alt="Кнопка заказа фонтана">
-				</button>
-			</li>
-			<li class="programs__item">
-				<button type="button">
-					<img src="img/icon 3.webp" alt="Кнопка заказа глинтвейна">
-				</button>
-			</li>
-			<li class="programs__item">
-				<button type="button">
-					<img src="img/icon 4.webp" alt="Кнопка заказа ваты">
-				</button>
-			</li>
-			<li class="programs__item">
-				<button type="button">
-					<img src="img/icon 5.webp" alt="Кнопка заказа попкорна">
-				</button>
-			</li>
-		</ul> -->
 	</div>
 </section>
