--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,12 +19,12 @@
 							data-main-link>Цены</a>
 					</li>
 					<li class="nav__item">
-						<a href="#" class="nav__link nav__link-burger"
+						<a href="#additional-services" class="nav__link nav__link-burger"
 							data-main-link>Доп. услуги</a>
 					</li>
 					<li class="nav__item">
-						<a href="#destinations" class="nav__link nav__link-burger"
-							data-main-link>Контакты</a>
+						<a href="#partners" class="nav__link nav__link-burger"
+							data-main-link>Партнеры</a>
 					</li>
 					<li class="nav__item">
 						<a href="#blog" class="nav__link nav__link-burger"
