--- a/src/scss/components/_burger.scss
+++ b/src/scss/components/_burger.scss
@@ -4,7 +4,7 @@
 	@media (max-width: 800px) {
 		position: fixed;
 		top: 40px;
-		right: 5%;
+		right: 30px;
 		width: 36px;
 		height: 21px;
 		display: flex;
@@ -32,7 +32,7 @@
 
 			.burger__line {
 				width: 30px;
-				background-color: black;
+				background-color: var(--black);
 			}
 		}
 	}
