правки стилей + перенос модалок в js

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,29 +1,24 @@
 <section class="about" id="about">
 	<div class="container about__container" data-animation>
-		<div class="left">
+		<div class="about__left">
 			<h2 class="sub-title">О Компании</h2>
-			<p>Компания Шококо специализируется на
-				<b>сладостях, для которых необходимо
-					специфическое или редкое
-					оборудование.</b> Мягкое мороженое,
-				которое делается прямо на глазах у детей
-				на празднике? Легко! Вафли по-гонконгски
-				для коллег на корпоративе? Звоните, и мы
-				всё организуем!</p>
+			<p>Компания &laquo;Шококо&raquo; специализируется на&nbsp;<b>сладостях, для
+					которых необходимо специфическое</b> или редкое оборудование. Мягкое
+				мороженое, которое делается прямо на&nbsp;глазах у&nbsp;детей
+				на&nbsp;празднике? Легко! Вафли по-гонконгски для коллег
+				на&nbsp;корпоративе? Звоните, и&nbsp;мы&nbsp;всё организуем!</p>
 			<p>
-				Мы работаем с 2011 года, и с тех пор
-				имеем в своем «послужном списке» более
-				<b>900 успешно организованных
-					мероприятий.</b>
+				Мы&nbsp;работаем с&nbsp;2011&nbsp;года, и&nbsp;с&nbsp;тех пор имеем
+				в&nbsp;своем &laquo;послужном списке&raquo; <b>более 900 успешно
+					организованных мероприятий.</b>
 			</p>
 			<p>
-				Наши сладости и шоколадные
-				фонтаны сделают ваше
-				мероприятие незабываемым!
+				Наши сладости и&nbsp;шоколадные фонтаны сделают ваше мероприятие
+				незабываемым!
 			</p>
 		</div>
-		<div class="right">
-			<div id="parallax"></div>
+		<div class="about__right drop-shadow">
+			<img src="img/waffle.webp" alt>
 		</div>
 	</div>
 </section>
