--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -1,21 +1,21 @@
 <section class="partners" id="partners">
 	<div class="container partners__container">
-		<h2 class="sub-title">Наши партнеры</h2>
+		<h2 class="sub-title partners__title">Наши партнеры</h2>
 		<ul class="partners__list">
 			<li class="partners__item">
-				<img src="img/rzd.png" alt="Логотип РЖД">
+				<img src="img/rzd.webp" alt="Логотип РЖД">
 			</li>
 			<li class="partners__item">
-				<img src="img/vertex.png" alt="Логотип Вертекс">
+				<img src="img/vertex.webp" alt="Логотип Вертекс">
 			</li>
 			<li class="partners__item">
-				<img src="img/expoforum.jpg" alt="Логотип Экспофорум">
+				<img src="img/expoforum.webp" alt="Логотип Экспофорум">
 			</li>
 			<li class="partners__item">
-				<img src="img/silovie.jpg" alt="Логотип Силовые машины">
+				<img src="img/silovie.webp" alt="Логотип Силовые машины">
 			</li>
 			<li class="partners__item">
-				<img src="img/brinza.jpg" alt="Логотип Брынза">
+				<img src="img/brinza.webp" alt="Логотип Брынза">
 			</li>
 		</ul>
 	</div>
