--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -1,4 +1,4 @@
-<section class="programs grey-section" id="programs">
+<section class="programs" id="programs">
 	<div class="container" data-animation>
 		<h2 class="sub-title programs__title">Наши услуги</h2>
 		<ul class="programs__products">
@@ -108,22 +108,6 @@
 				</article>
 			</li>
 		</ul>
-		<div class="success-modal">
-			<div class="success-modal__container">
-				<div class="success-modal__content">
-					<p>Заявка отправлена 💌</p>
-					<p>Мы скоро с Вами свяжемся 😎</p>
-				</div>
-			</div>
-		</div>
-		<div class="fault-modal">
-			<div class="fault-modal__container">
-				<div class="fault-modal__content">
-					<p>Что-то пошло не так 💫</p>
-					<p>Проверьте соединение с интернетом 🌐</p>
-				</div>
-			</div>
-		</div>
 		<div class="popup popup-email">введите email полностью</div>
 		<div class="popup popup-phone">введите телефон полностью</div>
 	</div>
