--- a/src/partials/additional-services.html
+++ b/src/partials/additional-services.html
@@ -2,8 +2,8 @@
 	<div class="container additional-services__container">
 		<h2 class="sub-title">Доп. услуги</h2>
 		<ul class="additional-services__list">
-			<li class="additional-services__item">
-				<img src="img/popcorn.png" class="additional-services__item-img"
+			<li class="additional-services__item drop-shadow">
+				<img src="img/popcorn.webp" class="additional-services__item-img"
 					alt="Иконка ваты">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Попкорн</h3>
@@ -13,8 +13,8 @@
 					<a href="https://t.me/sofagruzdeva" class="order-btn">Заказать</a>
 				</div>
 			</li>
-			<li class="additional-services__item">
-				<img src="img/cotton.png" class="additional-services__item-img"
+			<li class="additional-services__item drop-shadow">
+				<img src="img/cotton.webp" class="additional-services__item-img"
 					alt="Иконка ваты">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Сахарная вата</h3>
@@ -24,8 +24,8 @@
 					<a href="https://t.me/sofagruzdeva" class="order-btn">Заказать</a>
 				</div>
 			</li>
-			<li class="additional-services__item">
-				<img src="img/mulled.png" class="additional-services__item-img"
+			<li class="additional-services__item drop-shadow">
+				<img src="img/mulled.webp" class="additional-services__item-img"
 					alt="Иконка ваты">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Глинтвейн</h3>
@@ -35,8 +35,8 @@
 					<a href="https://t.me/sofagruzdeva" class="order-btn">Заказать</a>
 				</div>
 			</li>
-			<li class="additional-services__item">
-				<img src="img/waffles.png" class="additional-services__item-img"
+			<li class="additional-services__item drop-shadow">
+				<img src="img/waffles.webp" class="additional-services__item-img"
 					alt="Иконка ваты">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Гонконгские вафли</h3>
