--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,32 +1,48 @@
 .about {
-	padding: 100px 0 100px 0;
+	padding: var(--section-indent) 0;
+	font-family: 'Santello';
 
 	&__container {
+		max-width: 1200px;
 		display: flex;
 		column-gap: 40px;
-		flex: 1 1 0px;
+
+		@media (max-width:800px) {
+			flex-wrap: wrap;
+		}
 	}
 
-	.right,
-	.left {
+	&__left {
 		width: 100%;
+
+		@media (max-width:900px) {
+			width: 150%;
+		}
 	}
 
-	#parallax {
-		width: 100%;
-		height: 100%;
-		background-image: url(../img/fontain.webp);
+	&__right {
 		border-radius: 20px;
-		box-shadow: 0 0 10px black;
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-attachment: fixed;
-		background-position: center;
+
+		@media (max-width:800px) {
+			width: 100%;
+			height: 250px;
+		}
+
+		& img {
+			object-fit: cover;
+			width: inherit;
+			height: 100%;
+			border-radius: inherit;
+		}
 	}
 
 	p {
 		margin-bottom: 20px;
 		display: block;
-		font-size: 32px;
+		font-size: 25px;
+
+		@media (max-width:800px) {
+			text-align: center;
+		}
 	}
 }
