--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -9,8 +9,8 @@ select:focus-visible {
 
 .sub-title {
 	text-align: center;
-	font-size: 60px;
-	margin-bottom: 40px;
+	font-size: var(--fz-60);
+	margin-bottom: clamp(1.563rem, 1.375rem + 0.94vw, 2.5rem);
 }
 
 .close-btn {
