--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -5,30 +5,35 @@
 	font-size: 30px;
 	width: 100%;
 	max-width: 365px;
-	border: 1px solid #000000;
-	box-shadow: 0 0 10px rgb(0, 0, 0);
+	border: 1px solid rgb(128, 128, 128);
+	box-shadow: 0 0 5px rgb(128, 128, 128);
 	border-radius: 4px;
 	background-color: #fff;
 	height: 100%;
+
+	@media (max-width: 600px) {
+		max-width: 400px;
+	}
 }
 
 .product__img {
 	margin-bottom: 20px;
 	display: block;
 	width: 100%;
-	max-height: 400px;
+	height: 400px;
 	overflow: hidden;
 	border-radius: 4px;
 
 	img {
 		width: 100%;
+		height: inherit;
 		object-fit: cover;
 	}
 }
 
 .product__title {
 	margin-bottom: 15px;
-	font-size: 20px;
+	font-size: var(--fz-20);
 	line-height: 20px;
 }
 
@@ -37,7 +42,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 4px;
-	font-size: 16px;
+	font-size: var(--fz-16);
 	color: var(--info-color);
 
 	ol {
