--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -18,7 +18,10 @@
 			</p>
 		</div>
 		<div class="about__right drop-shadow">
-			<img src="img/waffle.webp" alt>
+			<img src="img/waffle.jpg" srcset="img/waffle.webp" data-src="img/waffle.webp"
+				class="lazy-blur"
+				loading="lazy"
+				alt="Фотография продукта">
 		</div>
 	</div>
 </section>
