--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -36,5 +36,8 @@
 	<meta name="theme-color" content="#ffffff">
 	<title>Шококо</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link
+		rel="stylesheet"
+		href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	<script defer src="js/main.js"></script>
 </head>
