--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,16 +23,16 @@
 							data-main-link>Доп. услуги</a>
 					</li>
 					<li class="nav__item">
+						<a href="#gallery" class="nav__link nav__link-burger"
+							data-main-link>Галерея</a>
+					</li>
+					<li class="nav__item">
 						<a href="#partners" class="nav__link nav__link-burger"
 							data-main-link>Партнеры</a>
 					</li>
 					<li class="nav__item">
-						<a href="#blog" class="nav__link nav__link-burger"
-							data-main-link>Отзывы</a>
-					</li>
-					<li class="nav__item">
-						<a href="#contacts" class="nav__link nav__link-burger"
-							data-main-link>Галерея</a>
+						<a href="#footer" class="nav__link nav__link-burger"
+							data-main-link>Контакты</a>
 					</li>
 				</ul>
 			</nav>
