--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,7 @@
 			<h1 class="hero__main-title">шококо</h1>
 			<h2 class="hero__sub-title">Шоколадные фонтаны и&nbsp;необычные десерты для
 				праздников</h2>
-			<a class="hero__phone" href="#programs">Заказать</a>
+			<a class="main-link" href="#programs">Заказать</a>
 		</div>
 	</div>
 </section>
