--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,7 +4,7 @@
 	--main-font-size: 18px;
 
 	/* цвета */
-	--white: #fdfdfd;
+	--white: #ffffff;
 	--black: #000;
 	--main-color: #5c2e0d;
 	--wheat: #e7c09c;
@@ -16,6 +16,7 @@
 	--fz-40: clamp(2.188rem, 2.125rem + 0.31vw, 2.5rem);
 	--fz-32: clamp(1.563rem, 1.475rem + 0.44vw, 2rem);
 	--fz-20: 20px;
+	--fz-18: 18;
 	--fz-16: 16px;
 
 	/* отступы секций */
