--- a/src/partials/additional-services.html
+++ b/src/partials/additional-services.html
@@ -3,8 +3,9 @@
 		<h2 class="sub-title">Доп. услуги</h2>
 		<ul class="additional-services__list">
 			<li class="additional-services__item drop-shadow">
-				<img src="img/popcorn.webp" class="additional-services__item-img"
-					alt="Иконка ваты">
+				<img src="img/popcorn.webp" class="additional-services__item-img lazy-blur"
+					srcset="img/popcorn.webp" data-src="img/popcorn.webp"
+					alt="Иконка ваты" loading="lazy">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Попкорн</h3>
 					<p class="additional-services__item-descr">
@@ -14,8 +15,9 @@
 				</div>
 			</li>
 			<li class="additional-services__item drop-shadow">
-				<img src="img/cotton.webp" class="additional-services__item-img"
-					alt="Иконка ваты">
+				<img src="img/cotton.webp" class="additional-services__item-img lazy-blur"
+					srcset="img/cotton.webp" data-src="img/cotton.webp"
+					alt="Иконка ваты" loading="lazy">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Сахарная вата</h3>
 					<p class="additional-services__item-descr">
@@ -25,8 +27,9 @@
 				</div>
 			</li>
 			<li class="additional-services__item drop-shadow">
-				<img src="img/mulled.webp" class="additional-services__item-img"
-					alt="Иконка ваты">
+				<img src="img/mulled.webp" class="additional-services__item-img lazy-blur"
+					srcset="img/mulled.webp" data-src="img/mulled.webp"
+					alt="Иконка ваты" loading="lazy">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Глинтвейн</h3>
 					<p class="additional-services__item-descr">
@@ -36,8 +39,9 @@
 				</div>
 			</li>
 			<li class="additional-services__item drop-shadow">
-				<img src="img/waffles.webp" class="additional-services__item-img"
-					alt="Иконка ваты">
+				<img src="img/waffles.webp" class="additional-services__item-img lazy-blur"
+					srcset="img/waffles.webp" data-src="img/waffles.webp"
+					alt="Иконка ваты" loading="lazy">
 				<div class="additional-services__item-container">
 					<h3 class="additional-services__item-title">Гонконгские вафли</h3>
 					<p class="additional-services__item-descr">
