--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -25,12 +25,14 @@
 	&__header {
 		position: relative;
 		margin-bottom: 20px;
+		font-size: 25px;
 	}
 
 	&__form {
 		display: flex;
 		flex-direction: column;
 		row-gap: 20px;
+		font-size: 25px;
 	}
 
 	input,
