--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -7,12 +7,12 @@
 	font-size: 16px;
 	font-weight: 600;
 	line-height: 20px;
-	padding: 15px;
+	padding: 15px 15px 15px 30px;
 	border-radius: 10px;
 	background-image: url(../img/svg/invalid.svg);
 	background-repeat: no-repeat;
 	background-size: 25px;
-	background-position: 5px;
+	background-position: 1% 50%;
 	background-color: var(--invalid-color);
 	color: var(--white);
 	z-index: 2;
