--- a/src/scss/components/_partners.scss
+++ b/src/scss/components/_partners.scss
@@ -1,6 +1,6 @@
 .partners {
 	padding: var(--section-indent) 0;
-	background-image: url(../img/bg_2.jpg);
+	background-image: url(../img/bg2.webp);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
