--- a/src/scss/components/_programs.scss
+++ b/src/scss/components/_programs.scss
@@ -1,6 +1,6 @@
 .programs {
 	padding: var(--section-indent) 0;
-	background-image: url(../img/bg_1.webp);
+	background-image: url(../img/bg1.webp);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-color: var(--main-color);
