--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -10,13 +10,13 @@
 					<img src="img/3.webp" alt="Фото из галереи" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/bg_2.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/bg2.webp" alt="Фото из галереи" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
 					<img src="img/3.webp" alt="Фото из галереи" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/bg_2.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/bg2.webp" alt="Фото из галереи" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
 					<img src="img/main.webp" alt="Фото из галереи" loading="lazy">
