--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -3,9 +3,8 @@
 		<div class="about__left">
 			<h2 class="sub-title">О Компании</h2>
 			<p>Компания &laquo;Шококо&raquo; специализируется на&nbsp;<b>сладостях, для
-					которых необходимо специфическое</b> или редкое оборудование. Мягкое
-				мороженое, которое делается прямо на&nbsp;глазах у&nbsp;детей
-				на&nbsp;празднике? Легко! Вафли по-гонконгски для коллег
+					которых необходимо специфическое</b> или редкое оборудование. Вафли
+				по-гонконгски для коллег
 				на&nbsp;корпоративе? Звоните, и&nbsp;мы&nbsp;всё организуем!</p>
 			<p>
 				Мы&nbsp;работаем с&nbsp;2011&nbsp;года, и&nbsp;с&nbsp;тех пор имеем
