--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,22 +4,40 @@
 		<div class="swiper gallery__swiper">
 			<div class="swiper-wrapper gallery__swiper-wrapper">
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/main.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/gallery/1.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/1.webp" data-src="img/gallery/1.webp" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/3.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/gallery/2.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/2.webp" data-src="img/gallery/2.webp" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/bg2.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/gallery/3.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/3.webp" data-src="img/gallery/3.webp" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/3.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/gallery/4.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/4.webp" data-src="img/gallery/4.webp" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/bg2.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/gallery/5.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/5.webp" data-src="img/gallery/5.webp" loading="lazy">
 				</div>
 				<div class="swiper-slide gallery__swiper-slide drop-shadow">
-					<img src="img/main.webp" alt="Фото из галереи" loading="lazy">
+					<img src="img/gallery/6.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/6.webp" data-src="img/gallery/6.webp" loading="lazy">
+				</div>
+				<div class="swiper-slide gallery__swiper-slide drop-shadow">
+					<img src="img/gallery/7.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/7.webp" data-src="img/gallery/7.webp" loading="lazy">
+				</div>
+				<div class="swiper-slide gallery__swiper-slide drop-shadow">
+					<img src="img/gallery/8.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/8.webp" data-src="img/gallery/8.webp" loading="lazy">
+				</div>
+				<div class="swiper-slide gallery__swiper-slide drop-shadow">
+					<img src="img/gallery/9.jpg" alt="Фото из галереи" class="lazy-blur"
+						srcset="img/gallery/9.webp" data-src="img/gallery/9.webp" loading="lazy">
 				</div>
 			</div>
 			<div class="swiper-button-prev drop-shadow">
