--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
 			<span class="burger__line burger__line--min"></span>
 		</button>
 
-		<img class="logo" src="img/logo.webp" alt="Логотип">
+		<img class="logo" src="img/svg/logo.svg" alt="Логотип">
 		<div class="header__left">
 			<nav class="nav header__nav">
 				<ul class="nav__list">
