--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -5,8 +5,8 @@
 			<li>
 				<article class="product">
 					<div class="product__img">
-						<img src="img/elya.jpg" alt="Фото продукта" class="lazy-blur"
-							srcset="img/elya.webp" data-src="img/elya.webp" loading="lazy">
+						<img src="img/small.jpg" alt="Фото продукта" class="lazy-blur"
+							srcset="img/small.webp" data-src="img/small.webp" loading="lazy">
 					</div>
 					<h3 class="product__title">Маленький шоколадный фонтан (60 см) 3
 						яруса от 20 до 40 чел.</h3>
@@ -41,8 +41,8 @@
 			<li>
 				<article class="product">
 					<div class="product__img">
-						<img src="img/2.jpg" alt="Фото продукта" class="lazy-blur"
-							srcset="img/2.webp" data-src="img/2.webp" loading="lazy">
+						<img src="img/medium.jpg" alt="Фото продукта" class="lazy-blur"
+							srcset="img/medium.webp" data-src="img/medium.webp" loading="lazy">
 					</div>
 					<h3 class="product__title">Средний шоколадный фонтан (80 см) 3
 						яруса от 40 до 70 чел.</h3>
@@ -77,8 +77,8 @@
 			<li>
 				<article class="product">
 					<div class="product__img">
-						<img src="img/3.jpg" alt="Фото продукта" class="lazy-blur"
-							srcset="img/3.webp" data-src="img/3.webp" loading="lazy">
+						<img src="img/big.jpg" alt="Фото продукта" class="lazy-blur"
+							srcset="img/big.webp" data-src="img/big.webp" loading="lazy">
 					</div>
 					<h3 class="product__title">Большой шоколадный фонтан (112 см) 4
 						яруса от 80 до 120 чел.</h3>
@@ -120,8 +120,10 @@
 			<h2 class="sub-title additional-services__title">Доп. услуги</h2>
 			<ul class="additional-services__list">
 				<li class="additional-services__item drop-shadow">
-					<img src="img/popcorn.webp" class="additional-services__item-img lazy-blur"
-						srcset="img/popcorn.webp" data-src="img/popcorn.webp"
+					<img src="img/additional/popcorn.webp"
+						class="additional-services__item-img lazy-blur"
+						srcset="img/additional/popcorn.webp"
+						data-src="img/additional/popcorn.webp"
 						alt="Иконка ваты" loading="lazy">
 					<div class="additional-services__item-container">
 						<h3 class="additional-services__item-title">Попкорн</h3>
@@ -132,8 +134,9 @@
 					</div>
 				</li>
 				<li class="additional-services__item drop-shadow">
-					<img src="img/cotton.webp" class="additional-services__item-img lazy-blur"
-						srcset="img/cotton.webp" data-src="img/cotton.webp"
+					<img src="img/additional/cotton.webp"
+						class="additional-services__item-img lazy-blur"
+						srcset="img/additional/cotton.webp" data-src="img/additional/cotton.webp"
 						alt="Иконка ваты" loading="lazy">
 					<div class="additional-services__item-container">
 						<h3 class="additional-services__item-title">Сахарная вата</h3>
@@ -144,8 +147,9 @@
 					</div>
 				</li>
 				<li class="additional-services__item drop-shadow">
-					<img src="img/mulled.webp" class="additional-services__item-img lazy-blur"
-						srcset="img/mulled.webp" data-src="img/mulled.webp"
+					<img src="img/additional/mulled.webp"
+						class="additional-services__item-img lazy-blur"
+						srcset="img/additional/mulled.webp" data-src="img/additional/mulled.webp"
 						alt="Иконка ваты" loading="lazy">
 					<div class="additional-services__item-container">
 						<h3 class="additional-services__item-title">Глинтвейн</h3>
@@ -156,8 +160,10 @@
 					</div>
 				</li>
 				<li class="additional-services__item drop-shadow">
-					<img src="img/waffles.webp" class="additional-services__item-img lazy-blur"
-						srcset="img/waffles.webp" data-src="img/waffles.webp"
+					<img src="img/additional/waffles.webp"
+						class="additional-services__item-img lazy-blur"
+						srcset="img/additional/waffles.webp"
+						data-src="img/additional/waffles.webp"
 						alt="Иконка ваты" loading="lazy">
 					<div class="additional-services__item-container">
 						<h3 class="additional-services__item-title">Гонконгские вафли</h3>
