--- a/src/scss/components/_additional-services.scss
+++ b/src/scss/components/_additional-services.scss
@@ -32,9 +32,9 @@
 				position: absolute;
 				top: 10px;
 				right: 10px;
-				width: 30px;
-				height: 30px;
-				background-image: url(../img/touching.webp);
+				width: 33px;
+				height: 33px;
+				background-image: url(../img/svg/touching.svg);
 				background-size: cover;
 				background-repeat: no-repeat;
 			}
