--- a/src/scss/components/_clients.scss
+++ b/src/scss/components/_clients.scss
@@ -1,4 +1,4 @@
-.partners {
+.clients {
 	padding: var(--section-indent) 0;
 	background-image: url(../img/bg2.webp);
 	background-repeat: no-repeat;
