--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -16,8 +16,7 @@
 		transition: filter .55s ease;
 		height: 600px;
 		box-shadow: 0 0 10px black;
-
-
+		overflow: hidden;
 
 		img {
 			width: inherit;
