--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -54,5 +54,5 @@ body {
 @import "./components/popup";
 @import "./components/additional-services";
 @import "./components/gallery";
-@import "./components/partners";
+@import "./components/clients";
 @import "./components/footer";
