--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <section class="footer" id="footer">
 	<div class="container footer__container" data-animation>
 		<div class="footer__phone-block">
-			<a href="tel:+79111711003" class="main-link">8 911 711-10-03</a>
+			<a href="tel:+79111711003" class="main-link">+7 (911) 171 10 03</a>
 			<p class="footer__text">Вы можете связаться с нами в любой день с 9:00 до
 				20:00</p>
 		</div>
