--- a/src/partials/programs.html
+++ b/src/partials/programs.html
@@ -8,8 +8,11 @@
 						<img src="img/small.jpg" alt="Фото продукта" class="lazy-blur"
 							srcset="img/small.webp" data-src="img/small.webp" loading="lazy">
 					</div>
-					<h3 class="product__title">Маленький шоколадный фонтан (60 см) 3
-						яруса от 20 до 40 чел.</h3>
+					<div class="product__header">
+						<h3 class="product__title">Маленький шоколадный фонтан (60 см) 3
+							яруса от 20 до 40 чел.</h3>
+						<h3 class="product__title">Стоимость от&nbsp;12.000₽</h3>
+					</div>
 					<div class="product__info">
 						<p>Что входить в стоимость:</p>
 						<ol>
@@ -44,8 +47,11 @@
 						<img src="img/medium.jpg" alt="Фото продукта" class="lazy-blur"
 							srcset="img/medium.webp" data-src="img/medium.webp" loading="lazy">
 					</div>
-					<h3 class="product__title">Средний шоколадный фонтан (80 см) 3
-						яруса от 40 до 70 чел.</h3>
+					<div class="product__header">
+						<h3 class="product__title">Средний шоколадный фонтан (80 см) 3
+							яруса от 40 до 70 чел.</h3>
+						<h3 class="product__title">Стоимость от&nbsp;18.000₽</h3>
+					</div>
 					<div class="product__info">
 						<p>Что входить в стоимость:</p>
 						<ol>
@@ -80,8 +86,11 @@
 						<img src="img/big.jpg" alt="Фото продукта" class="lazy-blur"
 							srcset="img/big.webp" data-src="img/big.webp" loading="lazy">
 					</div>
-					<h3 class="product__title">Большой шоколадный фонтан (112 см) 4
-						яруса от 80 до 120 чел.</h3>
+					<div class="product__header">
+						<h3 class="product__title">Большой шоколадный фонтан (112 см) 4
+							яруса от 80 до 120 чел.</h3>
+						<h3 class="product__title">Стоимость от&nbsp;24.000₽</h3>
+					</div>
 					<div class="product__info">
 						<p>Что входить в стоимость:</p>
 						<ol>
